--- a/css/client-page.css
+++ b/css/client-page.css
@@ -4,7 +4,6 @@
 }
 
 
-
 body{
   background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
 }
@@ -34,13 +33,27 @@ iframe {
 }
 
 h2 {
+  text-align: center;
   padding-top: 200px;
   color:white;
-  font-family: 'FacitExtrabold1', Arial, sans-serif;
+  font-family: jaf-facitweb, sans-serif;
+  font-style: normal;
+  font-weight: 800;
   font-size: 40px;
 }
 
 p{
+  text-align: center;
+  font-size: 20px;
+  line-height: 30px;
   color:white;
   font-family: 'Inter', sans-serif;
+  padding-bottom: 200px;
+}
+
+.scroll-menu {
+  overflow-x: scroll;
+  overflow-y: hidden;
+  overflow: auto;
+  white-space: nowrap;
 }
