--- a/css/client-page.css
+++ b/css/client-page.css
@@ -1,11 +1,17 @@
 @font-face {
     font-family: 'facit';
-    src: url('/font/Facit-Extrabold.otf');
+    src: url('font/Facit-Extrabold.otf') format('opentype');
 }
 
 
 body{
   background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
+}
+
+iframe  {
+  border: 4px solid #FFFFFF;
+  border-radius: 16px;
+  box-shadow: 0 32px 48px -16px rgba(0,0,0,0.64);
 }
 
 
@@ -29,16 +35,17 @@ h1 {
 iframe {
   position: relative;
   z-index: 1;
-  height: 500px;
+  height: 42vw;
 }
 
 h2 {
   text-align: center;
   padding-top: 200px;
   color:white;
-  font-family: jaf-facitweb, sans-serif;
-  font-style: normal;
-  font-weight: 800;
+  /* font-family: 'facit', sans-serif; */
+  font-family: 'Exo', sans-serif;
+  
+  font-weight: bolder;
   font-size: 40px;
 }
 
@@ -67,12 +74,13 @@ p{
 
 .can img {
   height: 500px;
+  padding-bottom: 40px;
 }
 
 .can button {
   position:relative;
   font-family: 'Inter', sans-serif;
-  left: 30%;
+  left: 22%;
   border-radius: 26px;
   background-color: #FFD180;
   box-shadow: 0 6px 12px 2px rgba(0,0,0,0.06);
@@ -82,9 +90,10 @@ p{
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
     transition-duration: 0.4s;
+    margin-bottom: 30px;
 }
 
 .can button:hover {
