--- a/css/client-page.css
+++ b/css/client-page.css
@@ -74,29 +74,43 @@ p{
   padding-bottom: 20px;
 }
 
-.scroll-menu {
+/* .scroll-menu {
   overflow-x: scroll;
   overflow-y: hidden;
   overflow: auto;
   white-space: nowrap;
   position: relative;
   z-index: 1;
+} */
+
+.scroll-menu {
+  /* margin-left: 20px; */
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(6, calc(33% - 40px));
+  grid-template-rows: minmax(150px, 1fr);
 }
 
 .can  {
   display: inline-block;
   padding: 50px;
+  position:relative;
 }
 
+
 .can img {
-  height: 500px;
+  /* width: 15vw; */
   padding-bottom: 40px;
 }
 
 .can button {
-  position:relative;
+  margin: 0;
+  position:absolute;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+transform: translate(-50%, -50%);
   font-family: 'Open Sans', sans-serif;
-  left: 22%;
+  /* left: 22%; */
   border-radius: 26px;
   background-color: #FFD180;
   box-shadow: 0 6px 12px 2px rgba(0,0,0,0.06);
@@ -109,7 +123,7 @@ p{
   font-size: 14px;
   font-weight: bold;
     transition-duration: 0.4s;
-    margin-bottom: 30px;
+
 }
 
 .can button:hover {
