--- a/css/client-page.css
+++ b/css/client-page.css
@@ -48,11 +48,6 @@ h1 {
  /* change  paddingtop percent based on ratio of video. this one is for 9/16 */
 }
 
-/* iframe {
-  position: relative;
-  z-index: 1;
-  height: 42vw;
-} */
 
 h2 {
   text-align: center;
@@ -74,14 +69,7 @@ p{
   padding-bottom: 20px;
 }
 
-/* .scroll-menu {
-  overflow-x: scroll;
-  overflow-y: hidden;
-  overflow: auto;
-  white-space: nowrap;
-  position: relative;
-  z-index: 1;
-} */
+
 
 .scroll-menu {
   /* margin-left: 20px; */
@@ -89,6 +77,7 @@ p{
   grid-gap: 10px;
   grid-template-columns: repeat(6, calc(33% - 40px));
   grid-template-rows: minmax(150px, 1fr);
+  padding-bottom: 80px;
 }
 
 .can  {
@@ -98,19 +87,34 @@ p{
 }
 
 
+@keyframes float {
+	0% {
+		transform: translatey(0px);
+	}
+	50% {
+		transform: translatey(-40px);
+	}
+	100% {
+		transform: translatey(0px);
+	}
+}
+
 .can img {
   /* width: 15vw; */
   padding-bottom: 40px;
 }
 
+.can:hover > img {
+    animation: float 3s ease-in-out infinite;
+}
+
 .can button {
   margin: 0;
   position:absolute;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-transform: translate(-50%, -50%);
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   font-family: 'Open Sans', sans-serif;
-  /* left: 22%; */
   border-radius: 26px;
   background-color: #FFD180;
   box-shadow: 0 6px 12px 2px rgba(0,0,0,0.06);
@@ -122,14 +126,13 @@ transform: translate(-50%, -50%);
   display: inline-block;
   font-size: 14px;
   font-weight: bold;
-    transition-duration: 0.4s;
+  transition-duration: 0.4s;
 
 }
 
-.can button:hover {
+.can:hover > button {
   /* border: 2px solid #FFD180; */
   background-color: white;
-
 }
 
 .cloud-thing {
