--- a/css/client-page.css
+++ b/css/client-page.css
@@ -66,6 +66,9 @@ p{
   line-height: 30px;
   color:white;
   font-family: 'Open Sans', sans-serif;
+}
+
+p bottomp {
   padding-bottom: 20px;
 }
 
@@ -76,8 +79,8 @@ p{
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(6, calc(33% - 40px));
-  grid-template-rows: minmax(150px, 1fr);
-  padding-bottom: 80px;
+  /* grid-template-rows: minmax(50px, 150px); */
+  /* padding-bottom: 80px; */
 }
 
 .can  {
@@ -101,6 +104,7 @@ p{
 
 .can img {
   /* width: 15vw; */
+  max-height: 800px;
   padding-bottom: 40px;
 }
 
@@ -139,4 +143,16 @@ p{
     position: absolute;
     padding-top: 200px;
     width: 120vw;
+}
+
+.footer img {
+  margin: auto;
+  width: 150px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.footer {
+  margin-bottom: 50px;
 }
