--- a/css/client-page.css
+++ b/css/client-page.css
@@ -5,6 +5,7 @@
 
 html {
   max-width: 1400px;
+  margin: 0 auto;
 }
 
 
@@ -75,37 +76,41 @@ p bottomp {
 
 
 .scroll-menu {
-  /* margin-left: 20px; */
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(6, calc(33% - 40px));
-  /* grid-template-rows: minmax(50px, 150px); */
-  /* padding-bottom: 80px; */
+
 }
 
 .can  {
   display: inline-block;
   padding: 50px;
   position:relative;
+
 }
 
 
 @keyframes float {
 	0% {
 		transform: translatey(0px);
+    filter: drop-shadow(0px 5px 10px black);
 	}
 	50% {
 		transform: translatey(-40px);
+    filter: drop-shadow(0px 16px 30px black);
 	}
 	100% {
 		transform: translatey(0px);
+    filter: drop-shadow(0px 5px 10px black);
 	}
 }
 
 .can img {
   /* width: 15vw; */
   max-height: 800px;
+  min-width: 80px;
   padding-bottom: 40px;
+  filter: drop-shadow(0px 5px 10px black);
 }
 
 .can:hover > img {
