--- a/css/client-page.css
+++ b/css/client-page.css
@@ -6,6 +6,7 @@
 html {
   max-width: 1400px;
   margin: 0 auto;
+
 }
 
 
@@ -22,11 +23,6 @@ iframe  {
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-
-h1 {
-  color: red;
 }
 
 .header-image {
@@ -74,19 +70,17 @@ p bottomp {
 }
 
 
-
 .scroll-menu {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(6, calc(33% - 40px));
-
+    grid-template-rows: minmax(150px, 1fr);
 }
 
 .can  {
   display: inline-block;
   padding: 50px;
   position:relative;
-
 }
 
 
@@ -108,9 +102,15 @@ p bottomp {
 .can img {
   /* width: 15vw; */
   max-height: 800px;
-  min-width: 80px;
+  min-width: 100px;
   padding-bottom: 40px;
   filter: drop-shadow(0px 5px 10px black);
+  margin:auto;
+  display: flex;
+align-items: center;
+justify-content: center
+
+
 }
 
 .can:hover > img {
@@ -119,7 +119,7 @@ p bottomp {
 
 .can button {
   margin: 0;
-  position:absolute;
+  position: absolute;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -136,7 +136,6 @@ p bottomp {
   font-size: 14px;
   font-weight: bold;
   transition-duration: 0.4s;
-
 }
 
 .can:hover > button {
