--- a/css/client-page.css
+++ b/css/client-page.css
@@ -16,7 +16,7 @@ body{
 
 .framing-container {
 
-  padding-top: 40px;
+  top: 40;
   width: 70vw;
   margin: auto;
 }
@@ -106,13 +106,12 @@ p bottomp {
 
 .can img {
   width: 16vw;
-  /* height: 800px; */
   min-width: 100px;
   padding-bottom: 40px;
   padding-left: 10px;
   padding-right: 10px;
   filter: drop-shadow(0px 5px 10px black);
-  margin:auto;
+  /* margin:auto; */
   display: flex;
   align-items: center;
   justify-content: center
@@ -153,15 +152,20 @@ p bottomp {
 }
 
 .can:hover > button {
-  /* border: 2px solid #FFD180; */
   background-color: white;
 }
 
 .cloud-thing {
     position: absolute;
+    margin-top: auto;
+    padding-top: 20%;
+}
 
-
-    /* width: 120vw; */
+.bottom-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 5vw;
+  margin-bottom: 7vw;
 }
 
 .footer img {
