--- a/css/client-page.css
+++ b/css/client-page.css
@@ -49,7 +49,7 @@ body{
 iframe {
   border: 4px solid #FFFFFF;
   border-radius: 16px;
-  box-shadow: 0 32px 48px -16px rgba(0,0,0,0.64);
+  /* box-shadow: 0 32px 48px -16px rgba(0,0,0,0.64); */
 }
 
 
@@ -92,15 +92,15 @@ p bottomp {
 @keyframes float {
 	0% {
 		transform: translatey(0px);
-    filter: drop-shadow(0px 5px 10px black);
+    filter: drop-shadow(0px 0px 5px black);
 	}
 	50% {
 		transform: translatey(-40px);
-    filter: drop-shadow(0px 16px 30px black);
+    filter: drop-shadow(0px 0px 20px black);
 	}
 	100% {
 		transform: translatey(0px);
-    filter: drop-shadow(0px 5px 10px black);
+    filter: drop-shadow(0px 0px 5px black);
 	}
 }
 
@@ -110,12 +110,12 @@ p bottomp {
   padding-bottom: 40px;
   padding-left: 10px;
   padding-right: 10px;
-  filter: drop-shadow(0px 5px 10px black);
+  filter: drop-shadow(0px 0px 5px black);
   /* margin:auto; */
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
 
 }
 
@@ -140,7 +140,7 @@ p bottomp {
   font-family: 'Open Sans', sans-serif;
   border-radius: 26px;
   background-color: #FFD180;
-  box-shadow: 0 6px 12px 2px rgba(0,0,0,0.06);
+  box-shadow: 0 0px 12px 2px rgba(0,0,0,0.06);
   border: none;
   color: black;
   padding: 15px 32px;
