--- a/css/client-page.css
+++ b/css/client-page.css
@@ -8,16 +8,22 @@ body{
   background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
 }
 
+.image-container {
+    /* position: relative; */
+}
+
 .header-image {
   position: absolute;
-  top: 30;
-  max-width: calc(100vw - 40px);
+  /* left: -10px; */
+  top: 20;
+  left: -3px;
+  width: 120%;
 }
 
 .framing-container {
 
   top: 40;
-  width: 70vw;
+  width: 75vw;
   margin: auto;
 }
 
