remove padding on h tag
goen gone gone

--- a/css/client-page.css
+++ b/css/client-page.css
@@ -65,7 +65,7 @@ iframe {
 
 h2 {
   text-align: center;
-  padding-top: 10vw;
+  /* padding-top: 10vw; */
   color:white;
   font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
