--- a/css/client-page.css
+++ b/css/client-page.css
@@ -100,15 +100,15 @@ p bottomp {
 @keyframes float {
 	0% {
 		transform: translatey(0px);
-    filter: drop-shadow(0px 0px 5px black);
+    /* filter: drop-shadow(0px 0px 5px black); */
 	}
 	50% {
 		transform: translatey(-40px);
-    filter: drop-shadow(0px 0px 20px black);
+    /* filter: drop-shadow(0px 0px 20px black); */
 	}
 	100% {
 		transform: translatey(0px);
-    filter: drop-shadow(0px 0px 5px black);
+    /* filter: drop-shadow(0px 0px 5px black); */
 	}
 }
 
@@ -118,13 +118,34 @@ p bottomp {
   padding-bottom: 40px;
   padding-left: 10px;
   padding-right: 10px;
-  filter: drop-shadow(0px 0px 5px black);
+  /* filter: drop-shadow(0px 0px 5px black); */
   /* margin:auto; */
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.can img:after{
+
+  content:'';
+  display: block;
+  position: absolute;
+  left: 12%;
+  bottom: 0px;
+  width: 80%;
+  height: 10px;
+  background: transparent;
+  border-radius: 100px;
+  box-shadow: 0 50px 40px rgba(0,0,0,1);
+
+}
 
 
+.image a img{
+  transition: transform 500ms ease;
+}
+.image:hover a img{
+  transform: translateY(-20px);
 }
 
 .can:hover > img {
@@ -165,6 +186,7 @@ p bottomp {
 }
 
 .cloud-thing {
+  width: calc(100vw + 200px);
     position: absolute;
     margin-top: auto;
     padding-top: 20%;
