--- a/css/client-page.css
+++ b/css/client-page.css
@@ -4,6 +4,14 @@
   position: relative;
 }
 
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: calc(100vw - 20px);
+    margin: auto;
+    position: relative;
+  }
+}
+
 
 body{
   background-image: linear-gradient(#ED5E50, #F48658, #DB4A48);
@@ -16,13 +24,17 @@ body{
   margin: 0 auto;
 }
 
-.header-image {
-
-}
-
 .framing-container {
   width: 65vw;
   margin: 10vw auto;
+}
+
+
+@media only screen and (max-width: 768px) {
+  .framing-container {
+    width: 90vw;
+    margin: 10vw auto;
+  }
 }
 
 .top-page{
@@ -42,9 +54,11 @@ body{
   padding-top: 57.5%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
 }
 
+
+
+
 /* Then style the iframe to fit in the container div with full height and width */
 .responsive-iframe {
-
   position: absolute;
   top: 0;
   left: 0;
@@ -57,14 +71,11 @@ body{
 iframe {
   border: 4px solid #FFFFFF;
   border-radius: 16px;
-  /* box-shadow: 0 32px 48px -16px rgba(0,0,0,0.64); */
 }
-
 
 
 h2 {
   text-align: center;
-  /* padding-top: 10vw; */
   color:white;
   font-family: 'Open Sans', sans-serif;
   font-weight: bolder;
@@ -79,7 +90,7 @@ p{
   font-family: 'Open Sans', sans-serif;
 }
 
-p bottomp {
+p .bottomp {
   padding-bottom: 20px;
 }
 
@@ -91,63 +102,47 @@ p bottomp {
 
 .can  {
   display: inline-block;
-  padding: 5vw;
+  padding: 100px 5vw;
   width: 25vw;
   position:relative;
 }
 
-
-@keyframes float {
-	0% {
-		transform: translatey(0px);
-    /* filter: drop-shadow(0px 0px 5px black); */
-	}
-	50% {
-		transform: translatey(-40px);
-    /* filter: drop-shadow(0px 0px 20px black); */
-	}
-	100% {
-		transform: translatey(0px);
-    /* filter: drop-shadow(0px 0px 5px black); */
-	}
+.can:focus, .slick-slide{
+  outline: none;
 }
 
-.can img {
+
+.can .can-wrap {
   width: 16vw;
   min-width: 100px;
-  padding-bottom: 40px;
+  padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
-  /* filter: drop-shadow(0px 0px 5px black); */
-  /* margin:auto; */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.can img:after{
+.can .can-wrap:after{
   content:'';
   display: block;
   position: absolute;
-  left: 12%;
-  bottom: 0px;
-  width: 80%;
+  left: 20%;
+  bottom: 30px;
+  width: 60%;
+  margin: 0 auto;
   height: 10px;
   background: transparent;
   border-radius: 100px;
-  box-shadow: 0 50px 40px rgba(0,0,0,1);
+  box-shadow: 0 -70px 40px rgba(0,0,0,1);
 }
 
 
-.image a img{
+.can .can-wrap img{
   transition: transform 500ms ease;
 }
-.image:hover a img{
+.can:hover .can-wrap img{
   transform: translateY(-20px);
-}
-
-.can:hover > img {
-    animation: float 3s ease-in-out infinite;
 }
 
 @media only screen and (max-width: 600px) {
@@ -162,6 +157,7 @@ p bottomp {
   margin: 0;
   position: absolute;
   left: 50%;
+  bottom: 0px;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   font-family: 'Open Sans', sans-serif;
@@ -209,6 +205,8 @@ p bottomp {
 .footer p {
   font-family: 'Source Code Pro', monospace;
   font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
 }
 
 .footer {
